--- a/GestioSessions/GestioSessions.vcxproj.filters
+++ b/GestioSessions/GestioSessions.vcxproj.filters
@@ -44,6 +44,18 @@
     <ClInclude Include="Register.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CrearSessio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TxAltaSessio.h">
+      <Filter>Source Files\Domini</Filter>
+    </ClInclude>
+    <ClInclude Include="PassarelaSessio.h">
+      <Filter>Source Files\Dades</Filter>
+    </ClInclude>
+    <ClInclude Include="Sessio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinFormsProject.cpp">
@@ -62,6 +74,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Register.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CrearSessio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TxAltaSessio.cpp">
+      <Filter>Source Files\Domini</Filter>
+    </ClCompile>
+    <ClCompile Include="PassarelaSessio.cpp">
+      <Filter>Source Files\Dades</Filter>
+    </ClCompile>
+    <ClCompile Include="Sessio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
