--- a/GestioSessions/GestioSessions.vcxproj.filters
+++ b/GestioSessions/GestioSessions.vcxproj.filters
@@ -47,14 +47,17 @@
     <ClInclude Include="TxAltaSessio.h">
       <Filter>Source Files\Domini</Filter>
     </ClInclude>
-    <ClInclude Include="PassarelaSessio.h">
-      <Filter>Source Files\Dades</Filter>
-    </ClInclude>
     <ClInclude Include="Sessio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CrearSessio.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PassarelaSessio.h">
+      <Filter>Source Files\Dades</Filter>
+    </ClInclude>
+    <ClInclude Include="Database.h">
+      <Filter>Source Files\Dades</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -79,14 +82,17 @@
     <ClCompile Include="TxAltaSessio.cpp">
       <Filter>Source Files\Domini</Filter>
     </ClCompile>
-    <ClCompile Include="PassarelaSessio.cpp">
-      <Filter>Source Files\Dades</Filter>
-    </ClCompile>
     <ClCompile Include="Sessio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CrearSessio.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PassarelaSessio.cpp">
+      <Filter>Source Files\Dades</Filter>
+    </ClCompile>
+    <ClCompile Include="Database.cpp">
+      <Filter>Source Files\Dades</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
