--- a/GestioSessions/GestioSessions.vcxproj.filters
+++ b/GestioSessions/GestioSessions.vcxproj.filters
@@ -74,9 +74,6 @@
     <ClInclude Include="PassarelaEstudiant.h">
       <Filter>Source Files\Dades</Filter>
     </ClInclude>
-    <ClInclude Include="conversorString.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CtrlApuntarSessio.h">
       <Filter>Source Files\Domini</Filter>
     </ClInclude>
@@ -103,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="TxTransaccio.h">
       <Filter>Source Files\Domini</Filter>
+    </ClInclude>
+    <ClInclude Include="conversorString.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
